--- a/app/src/main/res/layout/activity_create_case.xml
+++ b/app/src/main/res/layout/activity_create_case.xml
@@ -41,6 +41,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:backgroundTint="@color/button_background"
+        android:onClick="onClickDone"
         android:text="@string/buttonDone_name"
         android:textSize="16sp"
         android:textStyle="bold"
